# rust-cdp

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml  bake.sh  rustfmt.toml  update-json.sh  update_json.sh
cdp/: Cargo.toml  LICENSE.md  README.md
cdp-definition/: Cargo.toml  README.md
cdp-definition/src/: lib.rs
cdp-definition/tests/: test.rs
cdp-derive/: Cargo.toml  README.md
cdp-derive/src/: lib.rs
cdp-derive/tests/: command_enum_with_struct_wildcard.rs  command_enum_with_tuple_wildcard.rs  command_enum_without_wildcard.rs  event_enum_with_struct_wildcard.rs  event_enum_with_tuple_wildcard.rs  event_enum_without_wildcard.rs  generic_command_enum.rs  generic_event_enum.rs
cdp/src/: generate.rs  generated.rs  lib.rs
cdp/tests/: test.rs
json/: browser_protocol.json
src/: client.rs  definition.rs  generate.rs  greeter.rs  http.rs  json.rs  lib.rs  macros.rs  proto.rs  proto_generated.rs  server.rs  tools.rs  tools_generated.rs  traits.rs  websocket.rs  ws.rs  ws_generated.rs
tests/: definition.rs  greeter.rs  http.rs  json.rs  macros.rs  proto.rs  tools.rs  websocket.rs  ws.rs
tests/helper/: mod.rs
tokio-cdp/: Cargo.toml  README.md
tokio-cdp/src/: common.rs  lib.rs  private.rs
tokio-cdp/src/greeter/: client.rs  mod.rs  server.rs
tokio-cdp/src/tools/: mod.rs  server.rs
tokio-cdp/tests/: test.rs
