[package]
name = "cdp"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
readme = "README.md"
keywords = ["chrome", "devtools", "dev", "tools", "protocol", "cdp", "client",
            "server", "chromium"]
repository = "https://github.com/devtools-html/cdp"
homepage = "https://github.com/devtools-html/cdp"
documentation = "https://docs.rs/devtools-html/0.1.0"
description = """
Chrome DevTools Protocol types and (de)serialization for Rust
"""
categories = ["network-programming"]
build = "src/generate.rs"

[badges]
travis-ci = { repository = "devtools-html/cdp" }
appveyor = { repository = "spinda/cdp" }

[dependencies]
lazy_static = "0.2"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"

[dependencies.serde_derive]
git = "https://github.com/spinda/serde"
rev = "9e4a4bc244696d9e6461469341a0c5118a0ebbaf"

[build-dependencies]
Inflector = "0.10"
lazy_static = "0.2"
quick-error = "1.2"
quote = "0.3"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"

[build-dependencies.serde_derive]
git = "https://github.com/spinda/serde"
rev = "9e4a4bc244696d9e6461469341a0c5118a0ebbaf"
