# Lines containing "build" are deleted during baking (see bake.sh).

[package]
name = "cdp"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["chrome", "devtools", "dev", "tools", "protocol", "cdp", "client",
            "server", "chromium"]
repository = "https://github.com/devtools-html/cdp"
homepage = "https://github.com/devtools-html/cdp"
documentation = "https://docs.rs/cdp/0.1.0"
description = """
Chrome DevTools Protocol types and (de)serialization for Rust
"""
categories = ["network-programming"]
build = "src/generate.rs"

[badges]
travis-ci = { repository = "devtools-html/cdp" }
appveyor = { repository = "spinda/cdp" }

[dependencies]
lazy_static = "0.2"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.clippy]
version = "*"
optional = true

[build-dependencies]
Inflector = "0.10" #build
lazy_static = "0.2" #build
petgraph = "0.4" #build
quote = "0.3" #build
regex = "0.2" #build
rustfmt = "0.9" #build
serde = "1.0" #build
serde_derive = "1.0" #build
serde_json = "1.0" #build

[build-dependencies.clippy]
version = "*" #build
optional = true #build

[features]
default = []
strict = ["clippy"]
