
[package]
name = "cdp"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["chrome", "devtools", "dev", "tools", "protocol", "cdp", "client",
            "server", "chromium"]
repository = "https://github.com/devtools-html/cdp"
homepage = "https://github.com/devtools-html/cdp"
documentation = "https://docs.rs/cdp/0.1.0"
description = """
Chrome DevTools Protocol types and (de)serialization for Rust
"""
categories = ["network-programming"]

[badges]
travis-ci = { repository = "devtools-html/cdp" }
appveyor = { repository = "spinda/cdp" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.clippy]
version = "*"
optional = true

[dependencies.lazy_static]
version = "0.2"
optional = true

[dependencies.regex]
version = "0.2"
optional = true



[features]
default = ["proto", "ws"]
strict = ["clippy"]
proto = []
ws = ["lazy_static", "regex"]
