
[package]
name = "cdp"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["chrome", "devtools", "protocol", "cdp", "chromium"]
repository = "https://github.com/devtools-html/rust-cdp"
homepage = "https://github.com/devtools-html/rust-cdp/tree/master/cdp"
documentation = "https://docs.rs/cdp/0.1.0"
description = """
Chrome DevTools Protocol types and (de)serialization for Rust
"""
categories = ["network-programming"]

[badges]
travis-ci = { repository = "devtools-html/rust-cdp" }
appveyor = { repository = "spinda/rust-cdp" }

[dependencies]
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[dependencies.clippy]
version = "*"
optional = true




[features]
default = []
strict = ["clippy"]
