[package]
name = "tokio-cdp"
version = "0.1.0"
authors = ["Michael Smith <michael@spinda.net>"]
license = "MPL-2.0"
readme = "README.md"
keywords = ["chrome", "devtools", "dev", "tools", "protocol", "cdp", "client",
            "server", "chromium", "tokio", "async"]
repository = "https://github.com/devtools-html/rust-cdp"
homepage = "https://github.com/devtools-html/rust-cdp/tree/master/tokio-cdp"
documentation = "https://docs.rs/tokio-cdp/0.1.0"
description = """
Chrome DevTools Protocol client/server library for Rust/Tokio
"""
categories = ["network-programming"]

[badges]
travis-ci = { repository = "devtools-html/rust-cdp" }
appveyor = { repository = "spinda/rust-cdp" }

[dependencies]
futures = "0.1.15"
lazy_static = "0.2.8"
quick-error = "1.2.1"
regex = "0.2.1"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-service = "0.1.0"
websocket-transport = "0.1.0"

[dependencies.clippy]
version = "*"
optional = true

[dependencies.hyper]
git = "https://github.com/spinda/hyper"
rev = "d54407ba9cb86f231052972cc1d1b50f9e9b6f74"

[dependencies.hyper-websocket]
git = "https://github.com/spinda/hyper-websocket"
rev = "1673844a4681249912ddccd9d855ddd2f6e13b45"

[dependencies.websocket]
version = "0.20.2"
default-features = false
features = ["async"]

[dev-dependencies.cdp]
path = "../cdp"

[features]
default = []
strict = ["clippy"]
